# financial_news_re

./: .gitignore  Gene1N.ipynb  MDL_no_news.py  README.md  bork_bork.py  bork_bork__kernel.py  d1.ipynb  d2.ipynb  flat_arch__DTR_model-Copy1___LOOK_HERE.ipynb  flat_arch__DTR_model.ipynb  flat_arch__ENR_model.ipynb  flat_arch__ETC_model - Copy (6).ipynb  flat_arch__ETR_model - Copy.ipynb  flat_arch__ETR_model.ipynb  flat_arch__GGG.ipynb  flat_arch__GLS_model.ipynb  flat_arch__KNR_model - Copy (3).ipynb  flat_arch__LBC_model - Copy.ipynb  flat_arch__LBR_model - Copy (5).ipynb  flat_arch__LBR_model.ipynb  flat_arch__LVC_model - Copy (5).ipynb  flat_arch__LVR_model - Copy (4).ipynb  flat_arch__LVR_model.ipynb  flat_arch__NVR_model.ipynb  flat_arch__RFC_model - Copy (4).ipynb  flat_arch__RFR_model.ipynb  flat_arch__SVC_model - Copy (4).ipynb  flat_arch__SVR_model - Copy (3).ipynb  flat_arch__XBR_model.ipynb  flat_model.ipynb  flat_model_draft.ipynb  flat_model_linear.ipynb  flat_model_linear_draft.ipynb  flat_model_linear_optimize.ipynb  flat_model_linear_summary.ipynb  glaive_thrower.py  halt.txt  just_chillin.py  models_params.json  models_params_mini.json  (+12 more)
.ipynb_checkpoints/: d1-checkpoint.ipynb  d2-checkpoint.ipynb  flat_arch__DTC_model-Copy1-checkpoint.ipynb  flat_arch__DTC_model-checkpoint.ipynb  flat_arch__DTR_model-Copy1___LOOK_HERE-checkpoint.ipynb  flat_arch__DTR_model-checkpoint.ipynb  flat_arch__ETR_model-checkpoint.ipynb  flat_arch__LVR_model-checkpoint.ipynb  flat_arch__NVR_model-checkpoint.ipynb  flat_arch__OLS_model-checkpoint.ipynb  flat_model-checkpoint.ipynb  (+14 more)
(+67 files in other folders)
